--- a/frontend/src/components/SettingsPage.css
+++ b/frontend/src/components/SettingsPage.css
@@ -1,9 +1,9 @@
 /* General settings container styling */
 .settings-container {
     position: relative;
-    padding: 20px;
+    padding: 0;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     /* Full height of the viewport */
     max-width: 100%;
     /* Allow it to take full width */
@@ -69,4 +69,25 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
+}
+
+/* Dropdown styling */
+select {
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    background-color: white;
+    font-size: 16px;
+    transition: border-color 0.3s;
+}
+
+select:focus {
+    border-color: #666;
+    outline: none;
+}
+
+.dark-mode select {
+    background-color: #444;
+    color: white;
+    border: 1px solid #666;
 }
